--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="We have immense pleasure in inviting you to join the wedding ceremony of Shweta & Goapl"
+      content="Namaste JavaScript is a beautiful course where you can learn JavaScript in Depth"
     />
     <link rel="icon" href="%PUBLIC_URL%/icon-192.png" />
     <link
